--- a/static/style/styles.css
+++ b/static/style/styles.css
@@ -1,77 +1,117 @@
 /* All Pages */
 * { margin: 0; padding: 0; box-sizing: border-box; }
 html, body { width: 100%; height: 100%; background-color: ivory; }
-.content-container { width: 100%; height: 100%; display: flex; justify-content: center; align-items: flex-start; }
-.content { background-color: ivory; width: 75%; display: flex; justify-content: center; flex-wrap: wrap; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 12px;}
+.content-container { width: 100%; height: 100%; display: flex; justify-content: center; 
+                     align-items: flex-start; 
+                   }
+.content { background-color: ivory; width: 75%; display: flex; justify-content: center; 
+           flex-wrap: wrap; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 12px; 
+         }
 .cap { text-transform: capitalize; }
 header { width: 100; display: flex; justify-content: center; }
-.flash-alert { font-size: 1.4em; padding: 10px; width: 75%; background-color: lightgreen; color: black; text-align: center; }
+.flash-alert { font-size: 1.4em; padding: 10px; width: 75%; background-color: lightgreen; 
+               color: black; text-align: center; 
+             }
+th { opacity: 1; }
+th:hover { cursor: pointer; opacity: 0.7; }
 
 
 /* Nav Bar */
-.navbar-container { background-color: rgb(85, 85, 85); width: 100%; padding: 15px 0; display: flex; justify-content: center; margin-bottom: 10px; box-shadow: 0 0 6px 3px; font-size: 12px; }
-.navbar { width: 75%; background-color: rgb(85, 85, 85); padding: 0px 20px 0px 20px; overflow: hidden; display: flex; justify-content: space-between; }
+.navbar-container { background-color: rgb(85, 85, 85); width: 100%; padding: 15px 0; 
+                    display: flex; justify-content: center; margin-bottom: 10px; 
+                    box-shadow: 0 0 6px 3px; font-size: 12px; 
+                  }
+.navbar { width: 75%; background-color: rgb(85, 85, 85); padding: 0px 20px 0px 20px; 
+          overflow: hidden; display: flex; justify-content: space-between; 
+        }
 .navlogo { padding-top: 5px; font-size: 3em; text-decoration: none; }
 .navlogo:hover { cursor: pointer; color: inherit; text-decoration: none; }
 .logoder { color: black; }
-
 .logodie { color: red; }
 .logodas { color: gold; }
-.navlinks a { float: left; color: gold; text-align: center; padding: 12px 14px; text-decoration: none; font-size: 1.4em; font-family: Verdana, Geneva, Tahoma, sans-serif }
-.navlinks a:hover { background-color: #ddd; color: black; }
-.navlinks a.active { background-color: black; color: gold; }
-.navlinks a.active:hover { background-color: #ddd; color: black; }
+.navlinks a { float: left; color: gold; text-align: center; padding: 12px 14px; 
+              text-decoration: none; font-size: 1.4em; 
+              font-family: Verdana, Geneva, Tahoma, sans-serif }
+.navlinks a:hover { background-color: #ddd; color: black; border-bottom: black solid 2px; }
+.navlinks a.active { background-color: black; color: gold; border-bottom: gold solid 2px; }
+.navlinks a.active:hover { background-color: #ddd; color: black; border-bottom: black solid 2px; }
 
 
 /* Page: New Game */
-.page-head { font-size: 4em; width: 100%; margin: 20px 0px 20px 0px; padding: 10px 0px; text-align: center; }
-.option { border: black solid 3px; width: 75%; height: 150px; text-align: center; align-items: center; padding: 10px 0px 10px 20px; margin: 0px 0px 30px 0px; display: flex; color: black; text-decoration: none; border-radius: 4px; }
+.page-head { font-size: 3.6em; width: 100%; margin: 20px 0px 20px 0px; padding: 10px 0px; 
+             text-align: center; }
+.option { border: black solid 3px; width: 75%; height: 150px; text-align: center; 
+          align-items: center; padding: 10px 0px 10px 20px; margin: 0px 0px 30px 0px; display: flex;
+          color: black; text-decoration: none; border-radius: 4px; 
+        }
 .option:hover {  box-shadow: -5px 7px 6px 1px rgb(85, 85, 85); cursor: pointer; }
 .option:active { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
-.icon { border: gold solid 5px; padding: 5px; width: 68px; font-size: 3em; margin: 0px 10px 0px 0px; }
-.text { font-size: 1.6em; padding: 23px; width: 80%; text-align: left; }
+.icon { border: gold solid 5px; padding: 5px; width: 68px; font-size: 3em; 
+        margin: 0px 10px 0px 0px; 
+      }
+.text { font-size: 1.3em; padding: 23px; width: 80%; text-align: left; }
+.text > h4 { margin-bottom: 5px; }
 .games-container { margin-bottom: 25px; }
 
 /* Page: Results */
 /* Upper Info */
 .result-score { text-align: center; margin-bottom: 20px; }
 .display-menu { display: flex; justify-content: space-between; width: 80%; }
-.display-option { border: black solid 2px; padding: 5px; text-align: center; font-size: 1.4em; border-radius: 4px; line-height: 32px; vertical-align: middle; }
+.display-option { border: black solid 2px; padding: 5px; text-align: center; font-size: 1.4em; 
+                  border-radius: 4px; line-height: 32px; vertical-align: middle; 
+                }
 .display-option:hover { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 /* Table */
 .result-table { font-size: 1.5em; width: 80%; margin: 25px 0px 25px 0px; }
 .row-correct { background-color: lightgreen; padding: 100px; }
 .row-incorrect { background-color: lightcoral; padding: 100px; }
 .row-heading { background-color: lightgray; padding: 100px; }
-td, th { padding: 30px; }
+td, th { text-align: center; padding: 30px 1px 30px 1px; }
 
 
 /* General: Game Pages */
 /* Upper Info */
-.information { display: flex; justify-content: space-between; width: 85%; height: 65px; margin: 15px 0px; font-size: 1.25em; }
+.information { display: flex; justify-content: space-between; width: 85%; height: 65px; 
+               margin: 15px 0px; font-size: 1.25em; }
 .score { font-weight: bold; }
 .message-container { text-align: right; }
 .tip { font-size: 0.8em; width: 100%; }
 /* Question Display */
-.word-display { width: 100%; display: flex; justify-content: center; padding: 25px 0px 25px 0px; font-size: 1.8em; }
+.word-display { width: 100%; display: flex; justify-content: center; padding: 25px 0px 25px 0px; 
+                font-size: 1.8em; 
+            }
 .correct { color: green; font-style: normal; }
 .incorrect { color: red; font-style: normal; }
 .hint { width: 100%; margin-bottom: 20px; text-align: center; }
 /* Selection Options */
-.choices { width: 100%; justify-content: center; display: flex; flex-wrap: wrap; margin-bottom: 25px; }
-.choice { margin: 15px; border: black solid 2px; padding: 8px 15px; height: 50px; text-align: center; font-size: 1.6em; border-radius: 4px; line-height: 32px; vertical-align: middle; }
+.choices { width: 100%; justify-content: center; display: flex; flex-wrap: wrap; 
+           margin-bottom: 25px; }
+.choice { margin: 15px; border: black solid 2px; padding: 8px 15px; height: 50px; 
+          text-align: center; font-size: 1.6em; border-radius: 4px; line-height: 32px; 
+          vertical-align: middle; 
+        }
 .choice:active { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 .choice:hover { cursor: pointer; font-style: bold; box-shadow: -4px 4px 6px -1px; }
 /* Menu Options */
 .note { font-style: italic; margin-bottom: 30px; }
 .controls { display: flex; justify-content: space-between; width: 85%; flex-wrap: wrap; }
-.control { margin: 15px; color: black; border: black solid 2px; padding: 8px 15px; text-align: center; font-size: 1.4em; border-radius: 4px; line-height: normal; vertical-align: middle; }
+.control { margin: 15px; color: black; border: black solid 2px; padding: 8px 15px; 
+           text-align: center; font-size: 1.4em; border-radius: 4px; line-height: normal; 
+           vertical-align: middle;
+         }
 .control:hover { cursor: pointer; background-color: rgb(85, 85, 85); color: gold; }
 .results { color: inherit; text-decoration: none; }
 /* Game Info Overlay */
-.overlay { position: fixed; display: none; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0,0,0,0.5); z-index: 2; cursor: pointer; }
-.info-container { position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); -ms-transform: translate(-50%,-50%); text-align: center;                 border: rgb(85, 85, 85) 8px solid; background-color: ivory; color: #454545; padding: 20px; width: 500px; height: 300px; }
-.info-head { font-size: 2em; background-color: rgb(85, 85, 85); width: 100%; padding: 10px; text-align: center; color: gold; margin-bottom: 25px; }
+.overlay { position: fixed; display: none; width: 100%; height: 100%; top: 0; left: 0; right: 0; 
+           bottom: 0; background-color: rgba(0,0,0,0.5); z-index: 2; cursor: pointer;
+         }
+.info-container { position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); 
+                  -ms-transform: translate(-50%,-50%); text-align: center; 
+                  border: rgb(85, 85, 85) 8px solid; background-color: ivory; color: #454545; 
+                  padding: 20px; width: 500px; height: 300px; 
+                }
+.info-head { font-size: 2em; background-color: rgb(85, 85, 85); width: 100%; padding: 10px; 
+             text-align: center; color: gold; margin-bottom: 25px; }
 .info-text { font-size: 1.2em; text-align: left; text-indent: 25px; }
 /* Choice Button Style */
 .ansA { background-color: lightblue; }
@@ -89,24 +129,39 @@ td, th { padding: 30px; }
 
 /* Login and Register Forms */
 .form-container { width: 100%; display: flex; justify-content: center; }
-.form-inline { display: flex; flex-direction: row; align-items: center; justify-content: center; width: 100%; margin-bottom: 10px; }
+.form-inline { display: flex; flex-direction: row; align-items: center; justify-content: center; 
+               width: 100%; margin-bottom: 10px; 
+             }
 .form-inline label { margin: 5px 10px 5px 0; }
-.form-inline .rego { vertical-align: middle; margin: 5px 10px 5px 0; padding: 10px; background-color: #fff; border-top: none; border-right: none; 
-                      border-bottom: 6px solid #ccc; border-left: 6px solid #eee; border-radius: 5px; }
-.form-inline button { padding: 10px 20px; background-color: dodgerblue; border: 1px solid #ddd; color: white; cursor: pointer; }
+.form-inline .rego { vertical-align: middle; margin: 5px 10px 5px 0; padding: 10px; 
+                     background-color: #fff; border-top: none; border-right: none; 
+                     border-bottom: 6px solid #ccc; border-left: 6px solid #eee; 
+                     border-radius: 5px; 
+                   }
+.form-inline button { padding: 10px 20px; background-color: dodgerblue; border: 1px solid #ddd; 
+                      color: white; cursor: pointer; 
+                    }
 .form-inline button:hover { background-color: royalblue; }
 .login-btn { padding: 8px 15px; margin: 15px 0; text-align: center; }
 
-.rego:focus { border-bottom: 6px solid royalblue; border-left: 6px solid lightblue; outline: none; box-shadow: 0 0 0 2pt royalblue; }
+.rego:focus { border-bottom: 6px solid royalblue; border-left: 6px solid lightblue; 
+              outline: none; box-shadow: 0 0 0 2pt royalblue; }
 
 /* Profile Page */
 .profile-content { width: 85%; }
-#profile-menu { display: flex; flex-direction: column; flex-wrap: wrap; width: 100%; margin-top: 25px; }
+#profile-menu { display: flex; flex-direction: column; flex-wrap: wrap; width: 100%; 
+                margin-top: 25px; 
+              }
 #profile-top { display: inline-flex; width: 100%; padding: 10px; }
-#profile-top > div { width: 33%; text-align: center; background-color: rgb(255, 250, 125); font-size: 1.6em; margin-right: 10px; padding: 5px; }
+#profile-top > div { width: 33%; text-align: center; background-color: rgb(255, 250, 125); 
+                     font-size: 1.6em; margin-right: 10px; padding: 5px;
+                   }
+#profile-user > p { font-size: 0.7em; margin: 5px 0px 5px 0px; }
 #profile-top > p { width: 67%; background-color: lightgreen; font-size: 1.2em; padding: 5px; }
 #profile-bottom { display: inline-flex; width: 100%; padding: 10px; }
-#overall { width: 33%; display: flex; flex-direction: column; background-color: lightblue; text-align: center; margin-right: 10px; padding: 5px; }
+#overall { width: 33%; display: flex; flex-direction: column; background-color: lightblue; 
+           text-align: center; margin-right: 10px; padding: 5px; 
+         }
 #overall > h4 { font-size: 2em; margin-bottom: 10px; }
 #overall-data { display: flex; justify-content: center; text-align: center; }
 #overall-data > div { font-size: 2em; }
@@ -116,20 +171,25 @@ td, th { padding: 30px; }
 #profile-form { width: 100%; display: flex; flex-direction: column; padding: 5px; }
 #form-top { width: 100%; display: inline-flex; font-size: 1.4em; margin-bottom: 10px; }
 #form-top > p { margin-right: 10px; }
-.myslider { -webkit-appearance: none; background: grey; height: 100%; width: 40%; opacity: 2; outline: red; margin-right: 10px; }
-.myslider:hover { opacity: 1; }
-.myslider::-webkit-slider-thumb { -webkit-appearance: none; cursor: pointer; background: gold; width: 5%; height: 20px; }
+.myslider { -webkit-appearance: none; background: ivory; height: 20px; width: 40%; 
+            margin-right: 10px; border-radius: 10px; outline: none;
+          }
+.myslider:focus { box-shadow: 0 0 0 1pt  lightskyblue; }
+.myslider::-webkit-slider-thumb { -webkit-appearance: none; cursor: pointer; 
+                                  background: rgb(85, 85, 85); width: 5%; height: 20px; 
+                                  border-radius: 10px; 
+                                }
 #form-bottom { width: 100%; display: inline-flex; font-size: 1.4em; margin-bottom: 10px; }
 #gametype-filter { display: inline-flex; margin-right: 25px;}
 #gametype-filter > p, #gametype-filter > select { margin-right: 15px; }
 #gametype-filter > select { padding: 3px; }
 #form-submit { display: flex; }
-#filter-submit { margin-right: 15px; padding: 5px; border: black solid 2px; background-color: lightgrey; }
+#filter-submit { margin-right: 15px; padding: 5px; border: black solid 2px; 
+                 background-color: lightgrey; 
+               }
 #filter-submit:hover { cursor: pointer; opacity: 0.9; }
 
 /* Profile Table */
-#th-gametype:hover, #th-question:hover, #th-answer:hover,
-#th-percentage:hover, #th-attempts:hover { cursor: pointer; }
 .row-perfect { background-color: lightgreen; }
 .row-good { background-color: rgb(255, 250, 125); }
 .row-poor { background-color:  orange; }
@@ -141,11 +201,12 @@ td, th { padding: 30px; }
   .form-inline .rego { margin: 10px 0; } 
   .form-inline { flex-direction: column; align-items: stretch; }
   .choices { flex-direction: column; } 
-  .content { font-size: 9px; }
   .navbar-container { font-size: 9px; }
   .option { width: 95%; }
   .text { padding: 23px 10px; }
-  .controls { flex-direction: row; justify-content: center; align-items: center; flex-wrap: wrap; width: 100%; }
+  .controls { flex-direction: row; justify-content: center; align-items: center; flex-wrap: wrap;
+              width: 100%; 
+            }
   .control { margin: 5px; }
   .navbar { align-items: center; width: 100%; flex-direction: column; }
   .navlinks { justify-content: space-evenly; }
@@ -153,4 +214,8 @@ td, th { padding: 30px; }
   #divider { background-color: none; margin: 0px; }
   #overall-data { flex-direction: column; }
   #overall-data > div { margin-bottom: 5px; }
+  td, th { text-align: center; font-size: 0.75em; }
+  .profile-content { width: 100%; }
+  .result-table { width: 100%; }
+  content { width: 100%; }
 }
