--- a/templates/results.html
+++ b/templates/results.html
@@ -4,20 +4,20 @@
 
 {% block content %}
 <div class="content-container">
-  <div class="content">
-      <h1 class="page-head">Results</h1>
-      <h2 class="result-score"></h2>
-      <div class="display-menu">
-        <div class="display-option all-res" onclick="displayResults(true)">All results</div>
-        <div class="display-option inc-res" onclick="displayResults(false)">Incorrect only</div>
-      </div>
-      <table class="result-table"></table>
-  </div>
+    <div class="content results-container">
+        <h1 class="page-head">Results</h1>
+        <h2 class="result-score"></h2>
+        <div class="display-menu">
+            <div class="display-option all-res" onclick="displayResults(true)">All results</div>
+            <div class="display-option inc-res" onclick="displayResults(false)">Incorrect only</div>
+        </div>
+        <table class="result-table"></table>
+    </div>
 </div>
 <script src="../static/scripts/results.js"></script>
 <script type="text/javascript">
-  document.getElementById("new-game").classList.add('active');
-  let userRecord = JSON.parse(' {{ user_record|tojson|safe }} ');
-  displayResults(true);
+    document.getElementById("results").classList.add('active');
+    let userRecord = JSON.parse(' {{ user_record|tojson|safe }} ');
+    displayResults(true);
 </script>
 {% endblock %}
